[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = [""]
description = ""
name = "pythonpcdevflag"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.43"
playsound = "^1.2"
pydub = "^0.23.1"
pysimplegui = "^4.19"
[tool.poetry.dev-dependencies]
